// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Checkbox Default 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-checkbox-input__root"
  >
    <input
      className="charcoal-checkbox-input__input"
      id="test-id"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      aria-hidden={true}
      className="charcoal-checkbox-input__overlay"
    >
      <pixiv-icon
        name="24/Check"
        unsafe-non-guideline-scale={0.6666666666666666}
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Checkbox Disabled 1`] = `
<div
  data-dark={false}
>
  <label
    aria-disabled={true}
    className="charcoal-checkbox__label"
    htmlFor="test-id"
  >
    <div
      className="charcoal-checkbox-input__root"
    >
      <input
        checked={false}
        className="charcoal-checkbox-input__input"
        disabled={true}
        id="test-id"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        aria-hidden={true}
        className="charcoal-checkbox-input__overlay"
        data-checked={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
    </div>
    <div
      className="charcoal-checkbox__text"
    >
      Accelerate creativity.
    </div>
  </label>
</div>
`;

exports[`Storybook Tests Checkbox Invalid 1`] = `
<div
  data-dark={false}
>
  <label
    className="charcoal-checkbox__label"
    htmlFor="test-id"
  >
    <div
      className="charcoal-checkbox-input__root"
    >
      <input
        aria-invalid={true}
        checked={false}
        className="charcoal-checkbox-input__input"
        id="test-id"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        aria-hidden={true}
        className="charcoal-checkbox-input__overlay"
        data-checked={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
    </div>
    <div
      className="charcoal-checkbox__text"
    >
      Accelerate creativity.
    </div>
  </label>
</div>
`;

exports[`Storybook Tests Checkbox Label 1`] = `
<div
  data-dark={false}
>
  <label
    className="charcoal-checkbox__label"
    htmlFor="test-id"
  >
    <div
      className="charcoal-checkbox-input__root"
    >
      <input
        checked={false}
        className="charcoal-checkbox-input__input"
        id="test-id"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        aria-hidden={true}
        className="charcoal-checkbox-input__overlay"
        data-checked={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
    </div>
    <div
      className="charcoal-checkbox__text"
    >
      Accelerate creativity.
    </div>
  </label>
</div>
`;
